# fpm-qsim

./: .gitattributes  .gitignore  CHANGES.md  LICENSE  MANIFEST.in  README.md  benchmark_v2.py  build.sh  build_report_v2.py  equivalence_test.py  make_charts_v2.py  pyproject.toml  setup.py
examples/: 01_basic_dephasing.py  02_lindblad_comparison.py  03_bounded_gamma.py  04_multi_qubit.py  05_circuit.py  06_multi_daemon.py
include/: fpm_core.hpp
results/: benchmark_results_v2.csv  benchmark_results_v2.json
scripts/: benchmark_competitors.py  build.sh
scripts/benchmark_results/: benchmark_results.json
src/: fpm_core.hpp  fpm_cpp_bindings.cpp
src/fpm_qsim/: __init__.py  _reference.py  _version.py  circuit.py  conservation.py  core.py  lindblad.py  states.py
src/scripts/: build.sh
tests/: equivalence_test.py  smoke_test.py  test_api.py  test_bounded_gamma.py  test_circuit.py  test_conservation.py  test_dispersion_contraction.py  test_energy_gamma.py  test_lindblad_correspondence.py  test_method_parameter.py  test_network_arena.py
