[build-system]
requires = [
    "setuptools>=64",
    "wheel",
    "pybind11>=2.12",
]
build-backend = "setuptools.build_meta"

[project]
name = "fpm-qsim"
version = "0.2.1"
description = "C++ accelerated FPM quantum simulation primitives with Python bindings"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "alxtheprogrammer" },
]
dependencies = [
    "numpy>=1.22",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Physics",
]

[project.urls]
Homepage = "https://github.com/alxspiker/fpm-qsim"
Repository = "https://github.com/alxspiker/fpm-qsim"
